# sfos_ground_control

./: .env_template  .gitignore  README.md  backups.yaml  custom_queries.py  environment.yml  firewall.yaml  firewalls.csv.example  firewalls.csv.example2  firewalls.json  firewalls.json.example  firewalls.yaml.example  gccli.py  get_hb_status.sfos  ground_control.py  header_samples.md  make.ps1  make_queries.py  manual_uv_setup.ps1  online_uv_setup.ps1  pyproject_init.toml  pyvenv.cfg  query_template.json  requirements.txt  run.py  setup.ps1  setup.sh  setup_environment.ps1  summary.JSON  test_23_1_login_good_a_auth.json  unsuccessful_hosts.JSON
Scripts/: activate  (+1 more)
sfos/: __init__.py  gccli.py  pyproject.toml
sfos/agent/: __init__.py  agent_main.py  init_db.py  methods.py  script_objs.py
sfos/agent/actions/: __init__.py  command.py  query.py  script.py
sfos/agent/cli_args/: __init__.py  command_args.py  query_args.py  report_args.py  root_args.py  script_args.py  startup.py
sfos/agent/methods/: __init__.py  methods.py
sfos/base/: __init__.py  auth.py  custom_types.py  db.py  exceptions.py  firewall_info.py  headers.py  index_match_values.py  index_parser.py  service_address.py  sfos_enums.py
sfos/base/db/: __init__.py  ground_control_db.py  init_db.py  instance.py
sfos/db/: __init__.py  data_formatting.py  database.py  query.py  table.py
sfos/gui/forms/: __init__.py  contact.py  firewall_details.py
sfos/logging/: __init__.py  logging.py  methods.py
sfos/objects/: __init__.py  custom_types.py  firewall_info.py  req_definition.py  service_address.py  sfos_request.py  sfos_response.py  strip_html.py
sfos/static/: __init__.py  aliases.py  constants.py  enums.py  exceptions.py  patterns.py
sfos/web_requests/: definition.py
sfos/webadmin/: __init__.py  connector.py  definition.py  methods.py  sfos_request.py
(+96 files in other folders)
