[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "sgc-worker"
version = "1.0.0"
description = "Sophos Ground Control Firewall Monitoring and Management"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = "==3.12.8"
authors = [
    {name = "Alan Toews", email = "alan.toews@sophos.com"},
]
maintainers = [
    {name = "Alan Toews", email = "alan.toews@sophos.com"},
]
keywords = ["Sophos", "Firewall", "op-prem", "manage", "monitor"]
classifiers= [
    # How mature is this project? Common values are
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "altair==5.3.0",
    "attr==0.3.2",
    "hvac==2.3.0",
    "json-fix==1.0.0",
    "prettytable==3.11.0",
    "pydantic>=2.7.4",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.1",
    "st-mui-table==0.0.6",
    "streamlit==1.37.1",
    "streamlit-autorefresh==1.0.1",
    "streamlit-pills==0.3.0",
    "typing-extensions==4.11.0",
    "urllib3==2.2.1",
]
[project.urls]
"Homepage" = "https://github.com/alantoewsio/sfos_ground_control"
"Bug Reports" = "https://github.com/alantoewsio/sfos_ground_control/issues"
"Source" = "https://github.com/alantoewsio/sfos_ground_control"

[dependency-groups]
dev = [
    "pip>=25.0",
    "pyinstaller>=6.11.1",
    "pytest==8.0.1",
    "wheel>=0.45.1",
]

[tool.setuptools]
# If there are data files included in your packages that need to be
# installed, specify them here.
packages= []
package-data = { "db_init" = ["*.sql"] }

[tool.ruff]
target-version = "py312"